--- a/dns_updater/templates/admin/dns_updater/domainnamerecord/change_list.html
+++ b/dns_updater/templates/admin/dns_updater/domainnamerecord/change_list.html
@@ -4,6 +4,6 @@
 {% block object-tools-items %}
     {{ block.super }}
     <li>
-        <a href="{% url 'admin:ip' %}" class="btn btn-high" style="background-color: lightskyblue">Change IP</a>
+        <a href="{% url 'admin:bulk-change-ip' %}" class="btn btn-high" style="background-color: lightskyblue">Bulk Change IP</a>
     </li>
 {% endblock %}
