--- a/dns_updater/templates/admin/dns_updater/domainnamerecord/bulk_change_ip.html
+++ b/dns_updater/templates/admin/dns_updater/domainnamerecord/bulk_change_ip.html
@@ -39,6 +39,6 @@
             <input type="submit" value="change" class="btn btn-primary">
         </form>
     </div>
-    <a style="color: white" href="{% url 'admin:dns_updater_domainnamerecord_changelist' %}" class="btn btn-primary back">back to DomainNameRecords</a>
+    <a style="color: white" href="{% url 'admin:dns_updater_domainnamerecord_changelist' %}" class="btn btn-primary back">&lt; back</a>
 
 {% endblock %}
